fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -228,13 +228,13 @@ body {
 	margin-bottom: 0;
 }
 
-.about-container-1, .about-containter-2, .about-container-3 {
+.about-container-1, .about-container-2, .about-container-3 {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	margin-top: 2em;
-	margin-bottom: 3em;
+	margin-top: 1em;
+	margin-bottom: 2em;
 }
 
 .about-container-1-text, .about-container-3-text {
@@ -242,7 +242,7 @@ body {
 }
 
 .about-more-info {
-	width: 75vw;
+	width: 80vw;
 }
 
 .about-subtitle {
@@ -322,6 +322,10 @@ body {
 		width: 52vw;
 		margin-left: 4em;
 		margin-right: 2em;
+	}
+
+	.about-more-info {
+		width: 72vw;
 	}
 }
 
